--- a/src/front/components/style.css
+++ b/src/front/components/style.css
@@ -1,6 +1,7 @@
 body {
-    font-family: 'Lato', sans-serif;
     background: #f2f2f2;
+    color: #333;
+    font-family: 'Lato', sans-serif;
     font-size: 16px;
     margin: 0;
 }
